--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -19,6 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+      ref: "2021"
     - name: setup python
       uses: actions/setup-python@v2
       with: 
