--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -9,7 +9,7 @@ name: Labeler for Feedbackable contributions
 on: 
   push: 
     branches:
-      - "2021" ## TO BE UPDATED MANUALLY (GitHub workflows don't provide dynamic access to the name of the default branch :( )
+      - "2021" ## TO BE UPDATED MANUALLY, 3 occurences (GitHub workflows don't provide dynamic access to the name of the default branch :( )
   pull_request:
     branches:
       - "2021" ## SAME
