--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -11,8 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Check for valid slides
     steps:
-      - name: checking out repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 2  # OR "2" -> To retrieve the preceding commit.
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v18.4
