--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -10,15 +10,15 @@ jobs:
   check-slide-links:
     runs-on: ubuntu-latest
     name: Check for valid slides
-    outputs:
-      all: ${{ steps.changes.outputs.all}}
-      ts: ${{ steps.changes.outputs.ts }}
     steps:
-      - name: Checkout repo
+      - name: checking out repo
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Get changed files 
-        id: changed-files
-        uses: tj-actions/changed-files@v18.4
-
+      # - name: Get changed files
+      #   id: changed-files
+      #   uses: tj-actions/changed-files@v18.4
+      - name: Check for valid slides
+        id: check-slides
+        uses: phamelink/course-automation-github-action@v1.2.3
+        # with:
+        #   allFiles: ${{ steps.changed-files.outputs.all_changed_files }}
+        #   token: ${{ secrets.GITHUB_TOKEN }}
