--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -7,14 +7,31 @@ on:
       - contributions/**
 
 jobs:
-  check-slide-links:
+  changes:
     runs-on: ubuntu-latest
-    name: Check for valid slides
     steps:
-      - name: checking out repo
-        uses: actions/checkout@v3
-      - name: Check for valid slides
-        id: check-slides
-        uses: phamelink/course-automation-github-action@v1.2.9
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - id: file_changes
+        uses: trilom/file-changes-action@v1.2.3
+      - name: test
+        run: |
+          cat $HOME/files.json
+          cat $HOME/files_modified.json
+          cat $HOME/files_added.json
+          cat $HOME/files_removed.json
+          echo '${{ steps.file_changes.outputs.files}}'
+          echo '${{ steps.file_changes.outputs.files_modified}}'
+          echo '${{ steps.file_changes.outputs.files_added}}'
+          echo '${{ steps.file_changes.outputs.files_removed}}'
+
+# jobs:
+#   check-slide-links:
+#     runs-on: ubuntu-latest
+#     name: Check for valid slides
+#     steps:
+#       - name: checking out repo
+#         uses: actions/checkout@v3
+#       - name: Check for valid slides
+#         id: check-slides
+#         uses: phamelink/course-automation-github-action@v1.2.9
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
