--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -12,16 +12,18 @@ jobs:
     steps:
       - id: file_changes
         uses: trilom/file-changes-action@v1.2.3
+        with:
+          output: ''
       - name: test
         run: |
-          cat $HOME/files.json
-          cat $HOME/files_modified.json
-          cat $HOME/files_added.json
-          cat $HOME/files_removed.json
-          echo '${{ steps.file_changes.outputs.files}}'
           echo '${{ steps.file_changes.outputs.files_modified}}'
           echo '${{ steps.file_changes.outputs.files_added}}'
-          echo '${{ steps.file_changes.outputs.files_removed}}'
+          echo "---------CREATING VARIABLES--------"
+          ADDED_FILES='${{ steps.file_changes.outputs.files_added}}'
+          MODIFIED_FILES='${{ steps.file_changes.outputs.files_modified}}'
+          echo $ADDED_FILES
+          echo $MODIFIED_FILES
+          grep "http://\|https://" $ADDED_FILES $MODIFIED_FILES | grep -v "github"
 
 # jobs:
 #   check-slide-links:
