--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -23,7 +23,9 @@ jobs:
           MODIFIED_FILES='${{ steps.file_changes.outputs.files_modified}}'
           echo $ADDED_FILES
           echo $MODIFIED_FILES
-          grep "http://\|https://" $ADDED_FILES $MODIFIED_FILES | grep -v "github"
+          echo $HOME
+          pwd
+#          grep "http://\|https://" $ADDED_FILES $MODIFIED_FILES | grep -v "github"
 
 # jobs:
 #   check-slide-links:
