--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -24,7 +24,9 @@ jobs:
           echo $ADDED_FILES
           echo $MODIFIED_FILES
           echo $HOME
+          echo "-----PWD------"
           pwd
+          echo "-------LS------"
           ls
 #          grep "http://\|https://" $ADDED_FILES $MODIFIED_FILES | grep -v "github"
 
