--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -3,8 +3,8 @@ on:
   pull_request_target:
     branches:
       - "2022"
-    paths:
-      - contributions/**
+#    paths:
+#      - contributions/**
 
 jobs:
   changes:
