--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -10,6 +10,7 @@ jobs:
   changes:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - id: file_changes
         uses: trilom/file-changes-action@v1.2.3
         with:
