--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -28,11 +28,7 @@ jobs:
           echo "-----PWD------"
           pwd
           echo "-------LS------"
-          ls contributions
-          ls contributions/presentation
-          ls contributions/presentation/week2-testing-and-CI
-          ls contributions/presentation/week2-testing-and-CI/test/
-          grep "t" $ADDED_FILES $MODIFIED_FILES
+          grep "http" $ADDED_FILES $MODIFIED_FILES
 
 # jobs:
 #   check-slide-links:
@@ -46,3 +42,8 @@ jobs:
 #         uses: phamelink/course-automation-github-action@v1.2.9
 #         with:
 #           token: ${{ secrets.GITHUB_TOKEN }}
+
+# ls contributions
+#           ls contributions/presentation
+#           ls contributions/presentation/week2-testing-and-CI
+#           ls contributions/presentation/week2-testing-and-CI/test/
