--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -1,11 +1,7 @@
-# Controls when the workflow will run
-on:
-  pull_request_target:
-    branches:
-      - "2022"
-    paths:
-      - contributions/**
-
+name: Check valid slides
+'on':
+  pull_request:
+  workflow_dispatch:
 jobs:
   changes:
     runs-on: ubuntu-latest
