--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -15,13 +15,27 @@ jobs:
         run: |
           ADDED_FILES='${{ steps.file_changes.outputs.files_added}}'
           MODIFIED_FILES='${{ steps.file_changes.outputs.files_modified}}'
+          ALL_FILES="$ADDED_FILES $MODIFIED_FILES"
           
-          if [ grep "http://\|https://" $ADDED_FILES $MODIFIED_FILES | grep -v "github" ] || [ grep ".pdf" $HOME/files_modified.json $HOME/files_added.json ] ; then
-            echo "Found valid link to slides!"
-            exit 0
-          else
-            exit 1
-          fi
+          for fname in $ALL_FILES
+          do
+            echo $fname
+            grep "http://\|https://" $fname | grep -v "github"
+            if "$fname" == *".pdf"
+              echo "PDF"
+            fi
+            grep ".pdf" $HOME/files_modified.json $HOME/files_added.json
+            if "$fname" == *"contributions/presentation/"*
+              echo "YEP"
+            fi
+          done
+          
+# if [ grep "http://\|https://" $ADDED_FILES $MODIFIED_FILES | grep -v "github" ] || [ grep ".pdf" $HOME/files_modified.json $HOME/files_added.json ] ; then
+#   echo "Found valid link to slides!"
+#   exit 0
+# else
+#   exit 1
+# fi
         
           
           
