--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -29,7 +29,7 @@ jobs:
               
               IS_PRESENTATION=1
               
-              if grep "http://\|https://" $fname | grep -q -v "github"; then 
+              if grep -q ".md" <<< "$fname" && grep "http://\|https://" $fname | grep -q -v "github"; then 
                 echo "HTTPS"
                 exit 0
               fi 
