--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -4,7 +4,7 @@ name: Check valid slides
   workflow_dispatch:
 jobs:
   changes:
-    if: ${{ contains(github.event.*.labels.*.name, 'bug') }}
+    if: ${{ contains(github.event.*.labels.*.name, 'presentation') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
