--- a/.github/workflows/essay-word-count.yml
+++ b/.github/workflows/essay-word-count.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install xpdf
         run: >
-          sudo apt-get update
+          sudo apt-get update;
           sudo apt-get install -y xpdf
       - id: file_changes
         uses: trilom/file-changes-action@v1.2.3
