--- a/tools/track_participation_config.json
+++ b/tools/track_participation_config.json
@@ -15,6 +15,7 @@
         "2024-10-02": 13,
         "2024-10-09": 13
     },
-    "COMMENTING_DURATION_HOURS": 5,
+    "LECTURE_DURATION_HOURS": 4,
+    "COMMENTING_LEEWAY_HOURS": 1,
     "LECTURE_TIMEZONE": "Europe/Stockholm"
 }
