trigger check_task workflow on PR edit
Since we check that the PR description matches the affected README file,
we need to repeat this check if the description ever changes.

Note that the GitHub default for if no types are specified is "opened",
"reopened", and "synchronize" -- so this commit only adds "edited", in
practice.

--- a/.github/workflows/check_task.yml
+++ b/.github/workflows/check_task.yml
@@ -3,6 +3,11 @@ name: Check task
 # Controls when the workflow will run
 on:
   pull_request_target:
+    types:
+      - opened
+      - reopened # good to check canvas again to see if eligibility changed
+      - edited # we need to check the new description against the README
+      - synchronize
     branches:
       - 2024
     paths:
